--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="nav">
         <nav class="navbar navbar-expand-lg ">
             <div class="container">
-                <img src="./assets/images/Logo.png" alt="Brooklyn logo" class="img-fluid">
+                <img src="./assets/images/Logo.png" alt="Brooklyn logo" class="img-fluid logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
                     aria-controls="offcanvasRight">
                     <span class="icon"><iconify-icon icon="ri:bar-chart-horizontal-line" width="24"
